--- a/BonusActivity1/Base.lproj/Main.storyboard
+++ b/BonusActivity1/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="i88-1k-wtZ">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BonusActivity1" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,81 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ype-Fq-EX1">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="eYD-BP-ug5">
+                                    <size key="itemSize" width="158" height="151"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="viewCell" id="9kd-vW-kZR" customClass="ItemCollectionViewCell" customModule="BonusActivity1" customModuleProvider="target">
+                                        <rect key="frame" x="76" y="0.0" width="158" height="151"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="158" height="151"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon-1024" translatesAutoresizingMaskIntoConstraints="NO" id="UvD-26-gwt">
+                                                    <rect key="frame" x="0.0" y="0.0" width="158" height="151"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="UvD-26-gwt" firstAttribute="top" secondItem="9kd-vW-kZR" secondAttribute="top" id="8Cv-nR-Zhw"/>
+                                            <constraint firstAttribute="trailing" secondItem="UvD-26-gwt" secondAttribute="trailing" id="TN9-yR-GFv"/>
+                                            <constraint firstAttribute="bottom" secondItem="UvD-26-gwt" secondAttribute="bottom" id="Vn6-WS-ZgU"/>
+                                            <constraint firstItem="UvD-26-gwt" firstAttribute="leading" secondItem="9kd-vW-kZR" secondAttribute="leading" id="whP-06-PFc"/>
+                                        </constraints>
+                                        <size key="customSize" width="158" height="151"/>
+                                        <connections>
+                                            <outlet property="imageView" destination="UvD-26-gwt" id="g3b-AP-dpm"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="WYd-as-5bF"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="wE9-FT-ape"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Ype-Fq-EX1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="AMT-OS-Cqs"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ype-Fq-EX1" secondAttribute="bottom" id="KCf-mQ-FZ9"/>
+                            <constraint firstAttribute="trailing" secondItem="Ype-Fq-EX1" secondAttribute="trailing" id="cCI-Ni-ocW"/>
+                            <constraint firstItem="Ype-Fq-EX1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="k0a-vG-aOs"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="6Py-Ad-RvN"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="869.60000000000002" y="777.66116941529242"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="oFO-0m-mh6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="i88-1k-wtZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="usO-wJ-0W4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Sus-1Q-mMB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JUh-QF-0jC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="777.66116941529242"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Icon-1024" width="1024" height="1024"/>
+    </resources>
 </document>
